add list animation

--- a/dapp/app/src/css/voterUI.css
+++ b/dapp/app/src/css/voterUI.css
@@ -9,4 +9,20 @@
     padding: 30px;
     margin: 30px;
     border: 2px black solid;
+    background-color: #eee;
+}
+
+
+.list-item {
+    transition: all 1s;
+    /* display: inline-block; */
+    margin-right: 10px;
+}
+.list-enter, .list-leave-to
+    /* .list-complete-leave-active below version 2.1.8 */ {
+    opacity: 0;
+    transform: translateY(30px);
+}
+.list-leave-active {
+    /* position: absolute; */
 }
