--- a/dapp/app/src/css/voterUI.css
+++ b/dapp/app/src/css/voterUI.css
@@ -1,4 +1,5 @@
 .wrapper {
+    margin-top: 1.5rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     text-align: center;
@@ -6,9 +7,8 @@
 
 
 .card {
-    padding: 30px;
-    margin: 30px;
-    border: 2px black solid;
+    padding: 20px;
+    margin: 10px;
     background-color: #eee;
 }
 
