--- a/dapp/app/src/css/app.css
+++ b/dapp/app/src/css/app.css
@@ -2,13 +2,17 @@ body {
   padding-top: 40px;
 }
 
-.panel-title {
+/* .panel-title {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-}
+} */
 .btn-lg {
   min-width: 200px
+}
+
+.dropdown-item {
+  display: block
 }
 
 .welcome {
