--- a/dapp/app/src/css/app.css
+++ b/dapp/app/src/css/app.css
@@ -6,11 +6,11 @@ body {
   padding: 2rem;
 }
 
-.panel-title {
+/* .panel-title {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-}
+} */
 .btn-lg {
   min-width: 200px
 }
@@ -18,6 +18,14 @@ body {
 .dropdown-item {
   display: block
 }
+
+.dropdown-menu {
+  width: 200px
+}
+/* .select-actions {
+  margin-left: -15px
+} */
+
 
 .welcome {
   font-size: 18px;
